feat: Modified competitor analytics,add subscription model from backend side,frontend side